chg: preseed.cfg fix

--- a/http/ubuntu-16.04/preseed.cfg
+++ b/http/ubuntu-16.04/preseed.cfg
@@ -7,9 +7,11 @@
 #### Contents of the preconfiguration file (for jessie)
 ### Localization
 # Preseeding only locale sets language, country and locale.
+# d-i debian-installer/locale string en_US.UTF-8
+# d-i debian-installer/country string us
+# d-i debian-installer/language string en
 d-i debian-installer/locale string en_US.UTF-8
-d-i debian-installer/country string us
-d-i debian-installer/language string en
+d-i time/zone string US/Eastern
 
 # The values can also be preseeded individually for greater flexibility.
 #d-i debian-installer/language string en
@@ -19,11 +21,12 @@ d-i debian-installer/language string en
 #d-i localechooser/supported-locales multiselect en_US.UTF-8, nl_NL.UTF-8
 
 # Keyboard selection.
+d-i keyboard-configuration/xkb-keymap select us
 # d-i keyboard-configuration/xkb-keymap select us
 # d-i keyboard-configuration/toggle select No toggling
-d-i keyboard-configuration/xkb-keymap select us
-d-i debian-installer/keymap select us
-d-i keymap select us
+# d-i keyboard-configuration/xkb-keymap select us
+# d-i debian-installer/keymap select us
+# d-i keymap select us
 # source: tyler-xenial
 # d-i console-setup/ask_detect boolean false
 # d-i keyboard-configuration/layoutcode string us
@@ -162,7 +165,7 @@ d-i clock-setup/utc boolean true
 
 # You may set this to any valid setting for $TZ; see the contents of
 # /usr/share/zoneinfo/ for valid values.
-d-i time/zone string US/Eastern
+# d-i time/zone string US/Eastern
 
 # Controls whether to use NTP to set the clock during the install
 d-i clock-setup/ntp boolean true
@@ -364,11 +367,13 @@ d-i apt-setup/use_mirror boolean true
 # Uncomment this to add multiarch configuration for i386
 d-i apt-setup/multiarch string amd64
 
+d-i base-installer/excludes string laptop-detect
+
 
 ### Package selection
 # source: gnome-desktop https://sites.google.com/a/ibeentoubuntu.com/debian-preeseds/Home/gnome-desktop
 tasksel tasksel/first multiselect standard, gnome-desktop
-d-i pkgsel/include string curl openssh-server sudo build-essential ca-certificates bash-completion vim-nox bzip2 rsync zip unzip tree screen sqlite3 ntp
+d-i pkgsel/include string curl openssh-server sudo build-essential ca-certificates bash-completion vim-nox bzip2 rsync zip unzip tree screen sqlite3 ntp libssl-dev linux-source dkms portmap python-software-properties software-properties-common git wget
 d-i pkgsel/language-packs multiselect
 d-i pkgsel/upgrade select safe-upgrade
 
