chg: base scripts for baking

--- a/http/ubuntu-16.04/preseed.cfg
+++ b/http/ubuntu-16.04/preseed.cfg
@@ -158,6 +158,7 @@ d-i user-setup/encrypt-home boolean false
 # The user account will be added to some standard initial groups. To
 # override that, use this.
 d-i passwd/user-default-groups string audio cdrom video admin
+# d-i passwd/user-default-groups string pi adm sudo dip plugdev lpadmin sambashare audio cdrom video admin
 
 ### Clock and time zone setup
 # Controls whether or not the hardware clock is set to UTC.
@@ -367,15 +368,17 @@ d-i apt-setup/use_mirror boolean true
 # Uncomment this to add multiarch configuration for i386
 d-i apt-setup/multiarch string amd64
 
-d-i base-installer/excludes string laptop-detect
+# d-i base-installer/excludes string laptop-detect
 
 
 ### Package selection
 # source: gnome-desktop https://sites.google.com/a/ibeentoubuntu.com/debian-preeseds/Home/gnome-desktop
 tasksel tasksel/first multiselect standard, gnome-desktop
 d-i pkgsel/include string curl openssh-server sudo build-essential ca-certificates bash-completion vim-nox bzip2 rsync zip unzip tree screen sqlite3 ntp libssl-dev linux-source dkms portmap python-software-properties software-properties-common git wget
-d-i pkgsel/language-packs multiselect
+# d-i pkgsel/include string curl openssh-server sudo build-essential ca-certificates bash-completion vim-nox bzip2 rsync zip unzip tree screen sqlite3 ntp libssl-dev linux-source dkms portmap python-software-properties software-properties-common git wget language-pack-en language-pack-gnome-en wamerican firefox-locale-en thunderbird-locale-en libreoffice libreoffice-l10n-en libreoffice-help-en hyphen-en hyphen-en-us autofs byobu chromium-browser cifs-utils console-common davfs2 eclipse eclipse-egit enigmail filezilla gedit-plugins git gitg gnupg gnupg-agent gpm htop inkscape libcrack2 libreoffice-presenter-console lightning-extension meld nautilus-compare nautilus-filename-repairer nautilus-image-converter nautilus-open-terminal network-manager-openvpn network-manager-openvpn-gnome nmap rdesktop retext ruby shutter synaptic terminator traceroute ubuntu-restricted-extras vim virt-manager vlc wine wireshark zenity
+# d-i pkgsel/language-packs multiselect
 d-i pkgsel/upgrade select safe-upgrade
+
 
 # Individual additional packages to install
 #d-i pkgsel/include string openssh-server build-essential
@@ -396,7 +399,7 @@ d-i pkgsel/upgrade select safe-upgrade
 # To also skip installing lilo, and install no bootloader, uncomment this
 # too:
 #d-i lilo-installer/skip boolean true
-
+# d-i pkgsel/updatedb boolean true
 
 # This is fairly safe to set, it makes grub install automatically to the MBR
 # if no other operating system is detected on the machine.
@@ -482,7 +485,6 @@ d-i finish-install/reboot_in_progress note
 # directly, or use the apt-install and in-target commands to easily install
 # packages and run commands in the target system.
 #d-i preseed/late_command string apt-install zsh; in-target chsh -s /bin/zsh
-
 
 d-i preseed/early_command string                                                                                                                \
         mkdir -p /usr/lib/post-base-installer.d &&                                                                                              \
