--- a/http/ubuntu-16.04/preseed.cfg
+++ b/http/ubuntu-16.04/preseed.cfg
@@ -494,6 +494,7 @@ d-i preseed/early_command string                                                
 d-i preseed/late_command string                                                   \
         echo 'Defaults:pi !requiretty' > /target/etc/sudoers.d/pi;                \
         echo 'pi ALL=(ALL) NOPASSWD: ALL' >> /target/etc/sudoers.d/pi;            \
+        echo '%pi ALL=(ALL) NOPASSWD: ALL' >> /target/etc/sudoers.d/pi;            \
         chmod 440 /target/etc/sudoers.d/pi;                                       \
         ln -sf /dev/null /target/etc/systemd/network/99-default.link;             \
         in-target update-initramfs -u
