--- a/http/ubuntu-16.04/preseed.cfg
+++ b/http/ubuntu-16.04/preseed.cfg
@@ -291,35 +291,57 @@ d-i partman/confirm_nooverwrite boolean true
 
 # source: https://github.com/kaorimatz/packer-templates/blob/master/http/ubuntu/preseed.cfg
 
-d-i partman-auto/method string regular
-d-i partman-auto/expert_recipe string \
-        scheme ::                     \
-        200 0 200 ext4                \
-                $primary{ }           \
-                $bootable{ }          \
-                method{ format }      \
-                format{ }             \
-                use_filesystem{ }     \
-                filesystem{ ext4 }    \
-                mountpoint{ /boot } . \
-        200% 0 200% linux-swap        \
-                $primary{ }           \
-                method{ swap }        \
-                format{ } .           \
-        1 0 -1 ext4                   \
-                $primary{ }           \
-                method{ format }      \
-                format{ }             \
-                use_filesystem{ }     \
-                filesystem{ ext4 }    \
-                mountpoint{ / } .
+# d-i partman-auto/method string regular
+# d-i partman-auto/expert_recipe string \
+#         scheme ::                     \
+#         200 0 200 ext4                \
+#                 $primary{ }           \
+#                 $bootable{ }          \
+#                 method{ format }      \
+#                 format{ }             \
+#                 use_filesystem{ }     \
+#                 filesystem{ ext4 }    \
+#                 mountpoint{ /boot } . \
+#         200% 0 200% linux-swap        \
+#                 $primary{ }           \
+#                 method{ swap }        \
+#                 format{ } .           \
+#         1 0 -1 ext4                   \
+#                 $primary{ }           \
+#                 method{ format }      \
+#                 format{ }             \
+#                 use_filesystem{ }     \
+#                 filesystem{ ext4 }    \
+#                 mountpoint{ / } .
+#
+# # This makes partman automatically partition without confirmation.
+# d-i partman-md/confirm boolean true
+# d-i partman-partitioning/confirm_write_new_label boolean true
+# d-i partman/choose_partition select finish
+# d-i partman/confirm boolean true
+# d-i partman/confirm_nooverwrite boolean true
 
-# This makes partman automatically partition without confirmation.
-d-i partman-md/confirm boolean true
-d-i partman-partitioning/confirm_write_new_label boolean true
+# You can choose one of the three predefined partitioning recipes:
+# - atomic: all files in one partition
+# - home:   separate /home partition
+# - multi:  separate /home, /var, and /tmp partitions
+d-i partman-auto/choose_recipe select atomic
+
+# If one of the disks that are going to be automatically partitioned
+# contains an old LVM configuration, the user will normally receive a
+# warning. This can be preseeded away...
+d-i partman-auto/method string lvm
+d-i partman-lvm/confirm boolean true
+d-i partman-lvm/confirm boolean true
+d-i partman-lvm/confirm_nooverwrite boolean true
+d-i partman-lvm/device_remove_lvm boolean true
 d-i partman/choose_partition select finish
 d-i partman/confirm boolean true
 d-i partman/confirm_nooverwrite boolean true
+
+# This makes partman automatically partition without confirmation, provided
+# that you told it what to do using one of the methods above.
+d-i partman/confirm_write_new_label boolean true
 
 ## Controlling how partitions are mounted
 # The default is to mount by UUID, but you can also choose "traditional" to
@@ -473,7 +495,7 @@ d-i finish-install/reboot_in_progress note
 # automatically.
 
 # This first command is run as early as possible, just after
-# preseeding is read.
+# preseeding is read.xx
 #d-i preseed/early_command string anna-install some-udeb
 # This command is run immediately before the partitioner starts. It may be
 # useful to apply dynamic partitioner preseeding that depends on the state
